# manganese

./: .gitignore  CMakeLists.txt  COPYING  README  headache-updater.py  headache.conf  headache.header
caesium/: CMakeLists.txt
caesium/caesium/: __init__.py  caesium.cxx
carbon/: CMakeLists.txt
carbon/carbon/: __init__.py
carbon/carbon/midi/: DataTypeConverters.py  EventDispatcher.py  MidiFileParser.py  MidiInFile.py  MidiInStream.py  MidiOutFile.py  MidiOutStream.py  MidiToText.py  RawInstreamFile.py  RawOutstreamFile.py  __init__.py  constants.py  example_mimimal_type0.py  example_print_channel_0.py  example_print_events.py  example_print_file.py  example_transpose_octave.py
carbon/carbon/midi/experimental/: EventDispatcherBase.py  MidiOutPassThrough.py  MidiOutStreamBase.py
cmake/modules/: PythonExtension.cmake
lithium/: CMakeLists.txt
lithium/lithium/: __init__.py  tests.py
lithium/lithium/lindenmayer/: __init__.py  rule.py
manganese/: CMakeLists.txt  __init__.py  config.hxx.in  init.cxx  init.hxx  manganese.cxx
manganese/apps/: caesium.py  carbon.py  gltest.py  lithium.py  molybdenum.py  testwurst.py  tungsten.py  utabor.py  vismut.py
manganese/apps/_apps/: __init__.py  gl.py
manganese/config/: __init__.py
manganese/math/: vector.py
manganese/midi/: __init__.py  pitch.py
manganese/midi/event/: __init__.py  classifier.py  midi_event.cxx  midi_event.hxx
manganese/midi/jack/: __init__.py  bounded_buffer.cxx  bounded_buffer.hxx  classifier.py  client.cxx  client.hxx  dummy.py  event.py  jack.cxx  jack_ptr.hxx  midi_event.hxx  port.hxx
utabor/: CMakeLists.txt
utabor/data/: demo.mut  kadenz.rg
utabor/utabor/: __init__.py  centered_net.py  defs.hxx  errors.cxx  errors.hxx  execute.cxx  execute.hxx  global.hxx  grafkern.cxx  grafkern.hxx  hilfs.cxx  hilfs.hxx  interpreter.hxx  interval.cxx  interval.hxx  midikern.hxx  mut.cxx  net.py  parser.cxx  runtime.cxx  runtime.hxx  tabgen.cxx  utabor.cxx  utabor.hxx
vismut/: CMakeLists.txt
vismut/data/: flat-attrib.frag  flat-attrib.vert  flat.frag  flat.vert  simple.frag  simple.vert  textured.frag  textured.vert  trace.frag  trace.vert
vismut/vismut/: __init__.py  vismut.cxx
vismut/vismut/gl/: __init__.py  context.py  geometry.py  shaders.py  textures.py  util.py
vismut/vismut/gl/fonts/: __init__.py  errors.cxx  errors.hxx  faces.hxx  fonts.cxx  fonts.hxx  textures.cxx  textures.hxx
vismut/vismut/themes/: __init__.py  default.py  stars.py
vismut/vismut/video/: __init__.py  rect.cxx  rect.hxx  video.cxx  video.hxx
